@@ -35,6 +35,7 @@ command-confirmation=Repeat the command to confirm. This is a highly destructive
 command-trade-generation-failed=Trade generation failed.
 command-invalid-item-name=Invalid item name: __1__
 command-mouse-over-hex-core=Mouse over a hex core to use this command.
+command-failed-to-disable-quest=Failed to disable quest with name "__1__".
 operation-on-cooldown=[color=yellow]That operation is on cooldown.[.color] It will be available again in __1__ __plural_for_parameter__1__{1=second|rest=seconds}__.
 no-room-for-item=[color=orange]Inventory is full! __1__x __2__ was dropped on the ground at __3__[.color]
 rewards-while-away=You've been given quest rewards that were acquired by other players while you weren't playing.
@@ -69,6 +70,7 @@ removed-value=Removed value for [item=__1__] on [planet=__2__].
 removed-all-values=Removed value for [item=__1__] on all planets.
 item-values-imported=Item values successfully imported.
 feature-locked=Unlock __1__ from the __2__ quest to use this feature.
+quest-disabled=Quest disabled: __1__
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
@@ -81,6 +83,7 @@ discover-all=Discover all items in the catalog.
 add-trade=Add a trade to the hex core that you're mousing over.
 remove-trade=Remove trade #x from the hex core that you're mousing over (indexing starts at 1).
 complete-quest=Complete a quest, bypassing progress requirements.
+disable-quest=Disable a quest, allowing progression to skip the quest from its prerequisites to its following quests.
 tp-to-ship=Used in debugging, teleports you up to the first found space platform.
 chart=Reveal a planet's chunks within a range from spawn.
 spawn-ship=Spawn a spaceship above Nauvis preloaded with materials to build it.
