@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.0
 Date: 1/2/26
+  Minor Features:
+    - Added command /disable-quest, which lets you skip a quest in the progression path.  For example, "/disable-quest biter-rammer" to avoid having to ram biters with vehicles to progress.
+        Note that this also permanently makes its specific rewards unobtainable.  To skip and get the rewards, use "/complete-quest <quest>".
   Changes:
     - Disabled the original method of ranking up items to red stars (destroy your ship outside of the solar system while carrying hextreme items).
   Balancing:
